--- a/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
         <title>@ViewBag.Title</title>
         <link href="@Url.Content("~/Media/Blue.css")" rel="stylesheet" type="text/css" />
         <script src="@Url.Content("~/Scripts/jquery-2.1.0.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/MenuHighlighter.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/ErrorModule.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/PostCommand.js")" type="text/javascript"></script>
