--- a/src/Adform.Academy.DataTransfer.Web/Views/Databases/Edit.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Databases/Edit.cshtml
@@ -1,7 +1,6 @@
 ﻿@model Adform.Academy.DataTransfer.Web.Models.DatabaseItemModel
 @{
     ViewBag.Title = (Model.DatabaseId != 0 ? "Edit Database" : "Add Database");
-    ViewBag.MenuItem = "databases";
 }
 
 <div class="bCenter">
@@ -10,49 +9,55 @@
     </div>
     <div class="round bFull" id="right-panel">
         <div class="bCenter" style="margin: auto; text-align: center">
-        @using (Html.BeginForm("Save", "Databases", FormMethod.Post, new { id = "save-form" }))
-        {
-            <div>
-                @Html.LabelFor(x => x.ConnectionName)<br/>
-                @Html.EditorFor(x => x.ConnectionName)
-                <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.ConnectionName)</div>
-            </div>
+            @using (Html.BeginForm("Save", "Databases", FormMethod.Post, new { id = "save-form" }))
+            {
+                if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="bErr" style="display: inline-block">@Html.ValidationMessage("ErrorSummary")</div>
+                }
+                
+                <div>
+                    @Html.LabelFor(x => x.ConnectionName)<br/>
+                    @Html.EditorFor(x => x.ConnectionName)
+                    <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.ConnectionName)</div>
+                </div>
 
-            <div>
-                @Html.LabelFor(x => x.Host)<br />
-                @Html.EditorFor(x => x.Host)
-                <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.Host)</div>
-            </div>
+                <div>
+                    @Html.LabelFor(x => x.Host)<br />
+                    @Html.EditorFor(x => x.Host)
+                    <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.Host)</div>
+                </div>
 
-            <div>
-                @Html.LabelFor(x => x.Port)<br />
-                @Html.EditorFor(x => x.Port)
-                <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.Port)</div>
-            </div>
+                <div>
+                    @Html.LabelFor(x => x.Port)<br />
+                    @Html.EditorFor(x => x.Port)
+                    <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.Port)</div>
+                </div>
 
-            <div>
-                @Html.LabelFor(x => x.UserName)<br />
-                @Html.EditorFor(x => x.UserName)
-                <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.UserName)</div>
-            </div>
+                <div>
+                    @Html.LabelFor(x => x.UserName)<br />
+                    @Html.EditorFor(x => x.UserName)
+                    <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.UserName)</div>
+                </div>
 
-            <div>
-                @Html.LabelFor(x => x.Password)<br />
-                @Html.PasswordFor(x => x.Password)<br />
-            </div>
+                <div>
+                    @Html.LabelFor(x => x.Password)<br />
+                    @Html.PasswordFor(x => x.Password)<br />
+                </div>
 
-            <div>
-                @Html.LabelFor(x => x.DatabaseName)<br />
-                @Html.EditorFor(x => x.DatabaseName)
-                <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.DatabaseName)</div>
-            </div>
+                <div>
+                    @Html.LabelFor(x => x.DatabaseName)<br />
+                    @Html.EditorFor(x => x.DatabaseName)
+                    <div class="bValidationFloat">@Html.ValidationMessageFor(x => x.DatabaseName)</div>
+                </div>
             
-        @Html.HiddenFor(x => x.DatabaseId)
-        }
+                @Html.HiddenFor(x => x.DatabaseId)
+            }
+        </div>
     </div>
     <div class="round bFull" id="bottom-panel">
         <div style="float: left">
-            <button id="back-button" type="button" onclick="document.location.assign('@Url.Action("Index")')">Back</button>
+            <button id="back-button" type="button" onclick="history.go(-1)">Back</button>
         </div>
         <div style="float: right;">
             <button id="save-button" onclick="$('#save-form').submit()">Save</button>
