--- a/src/Adform.Academy.DataTransfer.Web/Views/Databases/Index.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Databases/Index.cshtml
@@ -13,16 +13,16 @@
     </div>
     <div class="round bRight" id="right-panel">
     @for (int x = 0; x < Model.DatabasesList.Count; x++)
+{
+    var d = Model.DatabasesList[x];
+    <div onclick="ItemClick(@d.DatabaseId)" class="menu-item-highlight" id="itemlist-group-@d.DatabaseId">
+        <div id="itemlist-name-@d.DatabaseId" style="float: left">@d.ConnectionName</div>
+        <div class="bClear"></div>
+    </div>
+    if (x + 1 != Model.DatabasesList.Count)
     {
-        var d = Model.DatabasesList[x];
-        <div onclick="DatabaseClick(@d.DatabaseId)" class="menu-item-highlight" >
-            <div id="database-@(d.DatabaseId)" style="float: left">@d.ConnectionName</div>
-            <div class="bClear"></div>
-        </div>
-            if (x + 1 != Model.DatabasesList.Count)
-            {
-                        <hr />
-            }
+            <hr />
+        }
     }
 
     </div>
@@ -30,9 +30,9 @@
         <div style="float: left">
             <button id="new-button" onclick="document.location.assign('@Url.Action("Create")')">New Database</button>
         </div>
-        <div style="float: right;">
-            <button id="edit-button" onclick="document.location.assign('@Url.Action("Edit")/' + window.SelectedDatabaseId)" style="display: none">Edit</button>
-            <button id="delete-button" onclick="DeleteClick()" style="display: none">Delete</button>
+        <div style="float: right; display: none" id="selected-item-controls">
+            <button id="edit-button" onclick="document.location.assign('@Url.Action("Edit")/' + window.SelectedItemId)">Edit</button>
+            <button id="delete-button" onclick="DeleteClick()">Delete</button>
         </div>
         <div class="bClear"></div>
     </div>
