--- a/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Adform.Academy.DataTransfer.Web.Tools.Authentication
+<!DOCTYPE html>
 <html>
     <head>
         <title>@ViewBag.Title</title>
@@ -9,9 +10,21 @@
         <script src="@Url.Content("~/Scripts/Shared/MenuHighlighter.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/ErrorModule.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/PostCommand.js")" type="text/javascript"></script>
-        <script> window.RootUrl = '@Url.Content("~/")'; </script>
+        <script src="@Url.Content("~/Scripts/Project/ItemList.js")" type="text/javascript"></script>
+        <script>
+            @{
+                int activeUserId = -1;
+                
+                var identity = User.Identity as DataTransferUserIdentity;
+                if (identity != null)
+                {
+                    activeUserId = identity.UserId;
+                }
+            }
+            window.ActiveUserId = '@activeUserId';
+            window.RootUrl = '@Url.Content("~/")';
+        </script>
     </head>
-
 <body>
     @RenderBody()
 </body>
