--- a/src/Adform.Academy.DataTransfer.Web/Views/ProjectEditor/Columns.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/ProjectEditor/Columns.cshtml
@@ -59,7 +59,12 @@
             </div>
         </div>
     }
-    
+    <div class="round bRight" id="right-panel-tutorial-table------">
+        Table will be copied if at least one column from it is selected. <br />
+        Click on desired tables you want to copy in the left menu and select desired fields.
+        At least one <b>DateTime</b> or <b>int</b> field type must be selected!
+    </div>
+
     <div class="round bFull" id="bottom-panel">
         <div style="float: left">
             <button id="back-button" type="button" onclick="history.go(-1)">Back</button>
