--- a/src/Adform.Academy.DataTransfer.Web/Views/ProjectEditor/Review.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/ProjectEditor/Review.cshtml
@@ -1,5 +1,4 @@
-﻿@using Adform.Academy.DataTransfer.Core.DTO.Models
-@using Adform.Academy.DataTransfer.WebApi.Contracts.Projects
+﻿@using Adform.Academy.DataTransfer.WebApi.Contracts.Projects
 @model Adform.Academy.DataTransfer.Web.Models.ProjectEditorModel
 @{
     ViewBag.Title = "Review project settings";
