--- a/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
@@ -10,19 +10,21 @@
         <script src="@Url.Content("~/Scripts/Shared/MenuHighlighter.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/ErrorModule.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/PostCommand.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/Project/ItemList.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/Shared/ItemList.js")" type="text/javascript"></script>
         <script>
             @{
                 int activeUserId = -1;
-                
+                bool isAdmin = false;
                 var identity = User.Identity as DataTransferUserIdentity;
                 if (identity != null)
                 {
                     activeUserId = identity.UserId;
+                    isAdmin = User.IsInRole("admin");
                 }
             }
             window.ActiveUserId = '@activeUserId';
             window.RootUrl = '@Url.Content("~/")';
+            window.ActiveUserIsAdmin = @(isAdmin ? "true" : "false");
         </script>
     </head>
 <body>
