--- a/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
         <script src="@Url.Content("~/Scripts/Shared/ErrorModule.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/PostCommand.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/Shared/ItemList.js")" type="text/javascript"></script>
+        <script src="@Url.Content("~/Scripts/moment.js")" type="text/javascript"></script>
+        
         <script>
             @{
                 int activeUserId = -1;
