--- a/src/Adform.Academy.DataTransfer.Web/Views/Users/Edit.cshtml
+++ b/src/Adform.Academy.DataTransfer.Web/Views/Users/Edit.cshtml
@@ -22,7 +22,7 @@
                 </div>
 
                 <div>
-                    @Html.LabelFor(x => x.Password)<br />
+                    @Html.LabelFor(x => x.Password)<b>*</b><br />
                     @Html.PasswordFor(x => x.Password)
                     <div class="bValidationFloat" id="PasswordValidation">@Html.ValidationMessageFor(x => x.Password)</div>
                     @if (Model.UserId != 0)
@@ -56,6 +56,8 @@
                     </table>
                 </div>
                 @Html.HiddenFor(x => x.UserId)
+                <br /><br />
+                <div style="text-align: right; padding-right: 15px"><b>*</b> Leave password field blank to keep current user password</div>
             }
         </div>
     </div>
